--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -20,19 +9,48 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav {
+  display: flex;
+  flex-direction: row;
+  text-align: start;
+  width: 100%;
+  margin-left: 10%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav div {
+  margin-left: 1%;
+  margin-top: 2%;
+}
+
+.friends-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.friend {
+  padding: 1%;
+  margin: 1%;
+  width: 45%;
+  border: 1px solid white;
+}
+
+.login-cont {
+  text-align: center;
+}
+
+.login-cont label {
+  margin-right: 100%;
+}
+
+.create-friend label {
+  margin-right: 100%;
+}
+
+.create-friend {
+  text-align: center;
 }
