--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -18,18 +18,20 @@
   flex-direction: row;
   text-align: start;
   width: 90%;
-  margin-left: 10%;
+  margin-left: 7%;
 }
-
 .nav div {
   margin-left: 1%;
   margin-top: 2%;
+  width: 7%;
 }
-
-.friends-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+.nav div a {
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  border-radius: 3px;
+  padding: 5% 8% 5% 8%;
+  background-color: slategray;
 }
 
 .friend {
@@ -39,18 +41,22 @@
   border: 1px solid white;
 }
 
+.friends-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .login-cont {
   text-align: center;
 }
-
 .login-cont label {
-  margin-right: 100%;
-}
-
-.create-friend label {
   margin-right: 100%;
 }
 
 .create-friend {
   text-align: center;
+}
+.create-friend label {
+  margin-right: 100%;
 }
